# django-report-builder

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG  Dockerfile  LICENSE  MANIFEST.in  README.md  build_js.sh  docker-compose.yml  fig.yml  manage.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.cfg  setup.py  test_settings.py  test_urls.py  tox.ini  tox.py310.ini  tox.py37.ini  tox.py38.ini  tox.py39.ini
docs/: conf.py  contributors.md  endpoints.md  extend.md  extend.rst  hacking.md  howto.md  howto.rst  index.md  index.rst  quickstart.md  quickstart.rst
js/: .angular-cli.json  README.md  angular.json  karma.conf.js  package.json  proxy.conf.json  tsconfig.json  tslint.json
js/e2e/: app.e2e-spec.ts
js/src/: custom-theme.scss  index.html  polyfills.ts  styles.css  styles.scss
report_builder/: .models.py.swp  admin.py  apps.py  email.py  mixins.py  models.py  tasks.py  tests.py  unique_slugify.py  urls.py  utils.py  views.py
report_builder/api/: serializers.py  tests.py  views.py
report_builder/migrations/: 0001_initial.py  0002_auto_20141004_0206.py  0002_auto_20150201_1809.py  0002_auto__add_field_report_slug.py  0003_auto_20150720_1549.py  0003_auto__add_field_displayfield_total.py  0003_report_external_report_url.py  0004_auto_20160906_1149.py  0004_auto_20170805_1152.py  0004_auto_20170912_1530.py  0004_auto_20170915_2046.py  0004_auto__add_field_displayfield_group.py  0005_add_delta_filtering.py  (+17 more)
report_builder_demo/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
report_builder_scheduled/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
(+727 files in other folders)
